Add helm CI workflow with kind